# LFBM5D

./: BM5DSR.m  BM5DSR_no_GT.m  CMakeLists.txt  Makefile  Makefile_LFBM3D  README.md  blur.m  bm3d.cpp  bm3d_LF.cpp  bm5d.cpp  bm5d.h  bm5d_core_processing.cpp  generateDatasetSR.m  getBlurringKernel.m  getParams.m  install_Windows10.md  lib_transforms.cpp  main.cpp  main_bm3d_LF.cpp  runBM5DSR.m  utilities.cpp  utilities_LF.cpp  utilities_LF.h
CMakeModules/: FindFFTW.cmake
src/: CMakeLists.txt  bm3d.cpp  bm3d.h  bm3d_LF.cpp  bm3d_LF.h  bm5d.cpp  bm5d.h  bm5d_core_processing.cpp  bm5d_core_processing.h  lib_transforms.h  main.cpp  main_bm3d_LF.cpp  utilities.cpp  utilities.h  utilities_LF.cpp  utilities_LF.h
