# This is the root Cmake file of LFBM5D
# author : Pierre Allain


PROJECT(BM5DProject)

cmake_minimum_required(VERSION 2.8)

SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_VERBOSE_MAKEFILE True)

include(FindOpenMP)
IF(OPENMP_FOUND)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF(OPENMP_FOUND)

IF(UNIX)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMakeModules/)
find_package(FFTW REQUIRED)
find_package(PNG REQUIRED)
find_package(ZLIB REQUIRED)
ENDIF(UNIX)

IF(WIN32)
ADD_DEFINITIONS(-DWINDOWS)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX)
ENDIF(WIN32)

SET(LIBRARY_OUTPUT_PATH ${${PROJECT_NAME}_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${${PROJECT_NAME}_SOURCE_DIR}/bin)

add_subdirectory(src)
